03.business-os/AICompanyManager/900.meta/axu_csv_r3_white_screen_diag_20260501_225235/061_browser_smoke.out
SMOKE_ROOT_HTML_LENGTH=0
SMOKE_HAS_CORE_CLASS=false
SMOKE_HAS_DASHBOARD=false
SMOKE_HAS_TASK_LEDGER=false
SMOKE_HAS_CSV=false
SMOKE_LISTENERS=
SMOKE_SYNC_ERROR_COUNT=1
SMOKE_UNHANDLED_COUNT=0
============================================================
SMOKE_SYNC_ERRORS
============================================================
/data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/assets/js/aicm-production-core.js:5800
    if (action === "task-ledger-csv-import") {\n      aicmCsvImportLoadedReadBeforeImport();\n      return;\n    }
                                              ^

SyntaxError: Invalid or unexpected token
    at new Script (node:vm:117:7)
    at createScript (node:vm:269:10)
    at Object.runInNewContext (node:vm:310:10)
    at file:///data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/900.meta/axu_csv_r3_white_screen_diag_20260501_225235/060_browser_smoke.mjs:165:6
    at ModuleJob.run (node:internal/modules/esm/module_job:430:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:661:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)
